--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -12,6 +12,17 @@
   font-family: 'Custom-font', sans-serif;
 }
 
+.page-enter-active,
+.page-leave-active {
+  transition: all 0.4s ease;
+}
+
+.page-enter-from,
+.page-leave-to {
+  opacity: 0;
+  filter: blur(1rem);
+}
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
@@ -87,7 +98,7 @@
   --foreground: oklch(0.145 0 0);
 }
 
-.dark {
+.dark-mode {
   --background: oklch(0.145 0 0);
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.145 0 0);
